# litetvm-ffi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/Utils/: AddLibbacktrace.cmake
include/ffi/: any.h  base_details.h  c_api.h  cast.h  dtype.h  endian.h  error.h  function.h  function_details.h  macros.h  memory.h  object.h  optional.h  rvalue_ref.h  string.h  traceback.h  type_traits.h
include/ffi/container/: array.h  container_details.h  map.h  shape.h  tensor.h  tuple.h  variant.h
include/ffi/extra/: base.h  base64.h  c_env_api.h  json.h  module.h  serialization.h  structural_equal.h  structural_hash.h
include/ffi/reflection/: access_path.h  accessor.h  creator.h  registry.h
src/ffi/: container.cpp  dtype.cpp  error.cpp  function.cpp  object.cpp  tensor.cpp  traceback.cpp
src/ffi/extra/: buffer_stream.h  env_c_api.cpp  env_context.cpp  json_parser.cpp  json_writer.cpp  library_module_dynamic_lib.cpp  library_module_system_lib.cpp  library_moodule.cpp  module.cpp  module_internal.h  reflection_extra.cpp  serialization.cpp  stream_context.cpp  structural_equal.cpp  structural_hash.cpp  testing.cpp
tests/cpp/: CMakeLists.txt  test_any.cpp  test_array.cpp  test_c_ffi_abi.cpp  test_cast.cpp  test_dtype.cpp  test_error.cpp  test_example.cpp  test_function.cpp  test_map.cpp  test_metadata.cpp  test_ndarray.cpp  test_object.cpp  test_optional.cpp  test_reflection.cpp  test_rvalue_ref.cpp  test_shape.cpp  test_string.cpp  test_tensor.cpp  test_tuple.cpp  test_variant.cpp  testing_object.h
tests/cpp/extra/: test_json_parser.cpp  test_json_writer.cpp  test_reflection_structural_equal_hash.cpp  test_serialization.cpp
